--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 		}
 		
 		td span {
-			color: #444;
+			color: rgb(250 218 94);
+			text-shadow: 0 0 6px #fada5e;
 			font-size: 0.8em;
 			position: absolute;
 			top: -1px;
@@ -91,10 +92,11 @@
 		
 		.active,
 		ul.clues-active {
-			color: rgb(46 153 209);
+			color: #999;
+
 		}
 		ul.clue-done {
-			color: #999;
+			color: rgb(46 153 209);
 			text-decoration: line-through;
 		}
 		
