--- a/index.html
+++ b/index.html
@@ -12,165 +12,18 @@
 	<script src="js/jquery.crossword.js"></script>
 	<script src="js/script.js"></script>
 
-	<style type="text/css" media="screen">
-	/*
-		Default puzzle styling
-	*/
-	body {
-		font: 62.5%/1.3em Helvetica, sans-serif;
-		width: 90.3%;
-		margin: 10px auto;
-		background: #121214;
-	}
-		table { 
-			margin-top: 30px;
-			border-collapse: collapse; 
-			border-spacing: 0; 
-			max-width: 100%;
-		}
-		table tr{
-			width: 100%;
-		}
-		table td {
-			width: 4em;
-			height: 4em;
-			border: 1px solid rgb(255 255 255 / 18%);
-			padding: 0;
-			margin: 0;
-			background-color: #121214;
-			position: relative;
-		}
-				
-		td input {
-			width: 100%;
-			height: 100%;
-			padding: 0em;
-			border: none;
-			text-align: center;
-			font-size: 3em;
-			color: #666;
-			background-color: rgb(255 255 255 / 8%);
-		}
-		
-		td input:focus {
-			background-color: rgb(255 255 255 / 7%);
-		}
-		
-		td span {
-			color: rgb(250 218 94);
-			text-shadow: 0 0 6px #fada5e;
-			font-size: 0.8em;
-			position: absolute;
-			top: -1px;
-			left: 1px;
-		}
-		
-		input.done {
-			font-weight: bold;
-			color: #5c8001;
-		}
-
-		ul[tabindex="1"] {
-			font-size: medium;
-			font-weight: light;
-			line-height: normal;
-			color: #ddd;
-			margin-bottom: .15rem;
-			margin-left: -100px;
-		}
-
-		h2 {
-			background-color: #f9d12f;
-			padding: 8px;
-			border-radius: 10px;
-			width: fit-content;
-		}
-
-		h2:hover {
-			background-color: #fbe076;
-		}
-		
-		.active,
-		ul.clues-active {
-			color: #999;
-
-		}
-		ul.clue-done {
-			color: rgb(46 153 209);
-			text-decoration: line-through;
-		}
-		
-		#puzzle-wrapper {
-			float: left;
-			width: 48%;
-			align-items: center;
-		}
-		#puzzle-clues {
-			float: left;
-			width: 50%;
-			display: flex;
-			align-items: space-around;
-			justify-content: space-around;
-		}
-
-		#across {
-			margin-right: 50px;
-		}
-
-		h3 {
-			color: #969696;
-			display: flex;
-			flex-direction: row;
-			align-items: center;
-			font-weight: 500;
-			line-height: 17px;
-		}
-
-		.sn {
-			color: rgb(250 218 94);
-			text-shadow: 0 0 6px #fada5e;
-			margin-right: 35%;
-		}
-		
-        .sn svg {
-            width: 40px;
-            height: 40px;
-            fill: currentColor;
-            filter: drop-shadow(0 0 6px #fada5e);
-        }
-
-		.onesat {
-			font-family: monospace;
-			margin-right: 30%;
-			font-size: small;
-		}
-
-		footer {
-			position: fixed;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			text-align: center;
-			padding: 10px;
-			color: #969696;
-			font-size: small;
-		}
-
-		a {
-			color: rgb(46 153 209);
-			text-decoration: none;
-		}
-
-	</style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 	<h3>
 		<div class="sn">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
-				<path fill="currentColor" fill-rule="evenodd" d="m46.7 96.4 37.858 53.837-71.787 62.934L117.5 155.4l-40.075-52.854 49.412-59.492Zm156.35 41.546-49.416-58.509-34.909 116.771 44.25-67.358 58.509 59.25L241.4 47.725Z"/>
-			</svg>
+			<a class="sn" href="https://stacker.news/r/jasonb">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+					<path fill="currentColor" fill-rule="evenodd" d="m46.7 96.4 37.858 53.837-71.787 62.934L117.5 155.4l-40.075-52.854 49.412-59.492Zm156.35 41.546-49.416-58.509-34.909 116.771 44.25-67.358 58.509 59.25L241.4 47.725Z"/>
+				</svg>
+			</a>
 		</div>
 		<div class="onesat">1sat=1sat</div>
 		Welcome to the unofficial and probably unwelcome weekly stacker crossword puzzle. It's like the New York Times, but not lame.
