--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js" lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Qurossword - A javascript crossword puzzle plugin</title>
+	<title>Crosswords for Stackers</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script src="js/jquery.crossword.js"></script>
 	<script src="js/script.js"></script>
-
+	<link rel="icon" href="icon_x128.png" />
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -29,7 +25,7 @@
 		Welcome to the unofficial and probably unwelcome weekly stacker crossword puzzle. It's like the New York Times, but not lame.
 	</h3>
 	
-<div id="puzzle-wrapper"><!-- crossword puzzle appended here --></div>
+<div id="puzzle-wrapper"></div>
 
 <footer>
 	<div>made in Ohio <img src="ohio.png" fill="currentColor" style="width: 20px; height: 20px; background: #969696;"> by <a href="https://stacker.news/jasonb">@jasonb</a></div>
