--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
 <div id="puzzle-wrapper"></div>
 
 <footer>
-	<div>made in Ohio <img src="ohio.png" fill="currentColor" style="width: 20px; height: 20px; background: #969696;"> by <a href="https://stacker.news/jasonb">@jasonb</a></div>
+	<div class="links">
+		<a href="https://national-debt-snake.vercel.app/">snake</a> \
+		<a href="https://nostrminusnostr.vercel.app/">nostr</a> \
+		<a href="https://nostrminusnostr.vercel.app/sports">sports</a> \
+		<a href="https://bitcoin-chess.vercel.app/">chess</a>
+		</br>
+		</br>
+		<a href="https://arcadewallet.vercel.app/">arcade</a> \
+		<a href="https://tnglnbits.vercel.app/">star trek</a> \
+		<a href="https://bitcoin-battleship.vercel.app/">battleship</a> \
+		<a href="https://bitcoin-facts.onrender.com/">bitcoin</a>
+	</div>
+	<div class="ohio">made in Ohio <img src="ohio.png" fill="currentColor" style="width: 20px; height: 20px; background: #969696;"> by <a href="https://stacker.news/jasonb">@jasonb</a></div>
 	</br>
 	<div style="font-size: x-small;">I didn't get any permission from the real sn news guys, who probably think this is corny.</div>
 </footer>
