--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</svg>
 			</a>
 		</div>
-		<div class="onesat">1sat=1sat</div>
+		<button class="onesat" onclick="togglePrice()">1sat=1sat</button>
 		Welcome to the unofficial and probably unwelcome weekly stacker crossword puzzle. It's like the New York Times, but not lame.
 	</h3>
 	
