--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</div>
 	<div class="ohio">made in Ohio <img src="ohio.png" fill="currentColor" style="width: 20px; height: 20px; background: #969696;"> by <a href="https://stacker.news/jasonb">@jasonb</a></div>
 	</br>
-	<div style="font-size: x-small;">I didn't get any permission from the real sn news guys, who probably think this is corny.</div>
+	<div style="font-size: x-small;">I didn't get any permission to make this from the real sn news guys, who probably think it's corny.</div>
 </footer>
 </body>
 </html>	
